# Qt-Creator-

./: CMakeLists.txt  main.cpp
TesteQt2/: CMakeLists.txt  main.cpp
